--- a/pokedex.css
+++ b/pokedex.css
@@ -1,109 +1,57 @@
-*{
-    font-family: Arial, Helvetica, sans-serif;
+const fetchPokemon = () => {
+    const pokeNameInput = document.getElementById("pokeName");
+    let pokeName = pokeNameInput.value;
+    pokeName = pokeName.toLowerCase();
+    const url = `https://pokeapi.co/api/v2/pokemon/${pokeName}`;
+    fetch(url).then((res) => {
+        if (res.status != "200") {
+            console.log(res);
+            pokeImage("./img/sad.png")
+            pokeImage2("./img/sad.gif")
+            tipo("N")
+            tipo2("N")
+        }
+        else {
+            return res.json();
+        }
+    }).then((data) => {
+        if (data) {
+            console.log(data);            
+            let pokeImg = data.sprites.front_default;
+            pokeImage(pokeImg);
+            console.log(pokeImg);
+            let pokeImg2 = data.sprites.front_shiny;
+            pokeImage2(pokeImg2);
+            console.log(pokeImg2);
+            let poketyp = data.types[0].type.name;
+            tipo(poketyp)
+            console.log(poketyp);
+            if (data.types.length == 2) {
+                console.log(data.types)
+                let poketyp2 = data.types[1].type.name;
+                tipo2(poketyp2)
+                console.log(poketyp2);
+            }else{
+                tipo2("N/A");
+            }            
+        }
+    });
 }
-header{
-    width: 100%;
-    height: 100px;
-    display: inline-flex;
-    flex-wrap: wrap;
-    color: aqua;    
-    justify-content: center;
-    font-style: italic;
-    font-size: small;
-    font-weight: bold;
+
+const pokeImage = (url) => {
+    const pokePhoto = document.getElementById("pokeImg");
+    pokePhoto.src = url;
 }
-body{
-    color: #3cd2f8;
-    margin: 0%;
-    text-align: center;
-    background-image: url(./img/pokeball.jpg);
-    background-repeat: repeat;
-    background-size: 100%;
-    display: block;
+
+const pokeImage2 = (url) => {
+    const pokePhoto = document.getElementById("pokeImg2");
+    pokePhoto.src = url;
 }
-section{
-    position: relative;
-    margin-top: -17px;    
-    width: 100%;
-    height: 400px;
-    color: #3cd2f8;
+const tipo = (url) => {
+    const poketype = document.getElementById("typ");
+    poketype.value = url;
 }
-.poke{
-    width: 500px;
-    height: 300px;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -40%);
-}
-.pokemon{
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-180%, -20%);
-}
-.shiny{
-    width: 100px;
-    height: 70px;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(70%, -44%);
-}
-.bot{
-    width: 20px;
-    height: 20px;
-    border-radius: 100%;
-    border-color: rgb(100, 159, 207);
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-1102%, 505%);
-    background-color: transparent;   
-}
-table {
-    background-color: transparent;
-    width: 100%;
-    border: 2px solid #ee0b0b;
-}
-th, td {
-    font-weight: bolder;
-    width: 10%;
-    text-align: center;                
-    border: 8px solid #ee0b0b;
-    color: #ee0b0b;                
-}
-.typ {
-    width: 70px;
-    height: 27px;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(60%, 398%);
-    background-color: grey;
-    text-align: center;
-    color: whitesmoke;
-}
-.typ2 {
-    width: 70px;
-    height: 27px;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(170%, 398%);
-    background-color: grey;
-    text-align: center;
-    color: whitesmoke;
-}
-.botTab{
-    width: 20px;
-    height: 20px;
-    border-bottom-right-radius: 100%;
-    border-bottom-left-radius: 100%;
-    border-color: rgb(100, 159, 207);
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-320%, 657%);
-    background-color: transparent;
+const tipo2 = (url) => {
+    const poketyp2 = document.getElementById("typ2");
+    poketyp2.value = url;
 }
