--- a/pokedex.css
+++ b/pokedex.css
@@ -19,7 +19,6 @@ body{
     background-image: url(./img/pokeball.jpg);
     background-repeat: repeat;
     background-size: 100%;
-    display: block;
 }
 section{
     position: relative;
@@ -106,4 +105,15 @@ th, td {
     left: 50%;
     transform: translate(-320%, 657%);
     background-color: transparent;
+}
+.nme1 {
+    width: 70px;
+    height: 30px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-237%, 349%);
+    background-color: rgb(77, 185, 95);
+    text-align: center;
+    color: whitesmoke;
 }
