--- a/index.css
+++ b/index.css
@@ -27,3 +27,17 @@ h1{
     font-weight: bolder;
     cursor:pointer;
 }
+.logo{
+    width: 35px;
+    height: 35px;
+}
+footer{
+    width: 100%;
+    height: 100px;
+    color: rgb(25, 0, 255);    
+    justify-content: center;
+    font-style: italic;
+    font-size: small;
+    font-weight: bold;
+    background-color: blanchedalmond
+}
