--- a/pokedex.css
+++ b/pokedex.css
@@ -157,3 +157,17 @@ div.mov{
     left: 50%;
     transform: translate(99%, -30%);
 }
+.logo{
+    width: 15px;
+    height: 15px;
+}
+footer{
+    width: 100%;
+    height: 30px;
+    color: rgb(25, 0, 255);    
+    justify-content: center;
+    font-style: italic;
+    font-size: xx-small;
+    font-weight: bold;
+    background-color: blanchedalmond
+}
